配列構文いろいろ

--- a/helloEx/helloEX.html
+++ b/helloEx/helloEX.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <pre>
-      <script type="text/javascript" src="2_helloEX.js">
+      <script type="text/javascript" src="helloEX.js">
 
       </script>
       <noscript>
